--- a/build.gradle
+++ b/build.gradle
@@ -10,15 +10,15 @@ buildscript {
 	}
 	dependencies {
 		classpath("org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}")
-		classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.2.1"
+		classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.6.2"
 	}
 }
 
 apply plugin: 'java'
-apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'org.sonarqube'
-apply plugin: 'jacoco'
+apply plugin: 'eclipse'
+apply plugin: "jacoco"
+apply plugin: "org.sonarqube"
 
 group = 'xyz.sw-warehouse.tmpdir'
 version = '0.0.1'
