--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,12 +1,12 @@
 server.port=6001
 tmpdir.file.expire-term-day=1
 tmpdir.file.max-size-mb=30
-tmpdir.file.root-path=D:\\storage\\
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
-spring.datasource.url=jdbc:mysql://dev.sw-warehouse.xyz:6002/TMP_DIR?autoReconnect=true&useSSL=false
-spring.datasource.username=tmpdir
-spring.datasource.password=10dlatlwjwkdth
+tmpdir.file.root-path=./storage
+spring.data.mongodb.host=dev.sw-warehouse.xyz
+spring.data.mongodb.port=7017
+spring.data.mongodb.database=TMP_DIR
+spring.data.mongodb.username=tmpdir
+spring.data.mongodb.password=09WESdlatlwjwkdth
 spring.http.multipart.max-file-size=${tmpdir.file.max-size-mb}MB
 spring.http.multipart.max-request-size=${spring.http.multipart.max-file-size}
 logging.path=logs/
