--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -2,7 +2,7 @@ server.port=6001
 tmpdir.file.expire-term-day=1
 tmpdir.file.max-size-mb=30
 tmpdir.file.root-path=./storage
-spring.data.mongodb.host=dev.sw-warehouse.xyz
+spring.data.mongodb.host=dev.sw2h.xyz
 spring.data.mongodb.port=7017
 spring.data.mongodb.database=TMP_DIR
 spring.data.mongodb.username=tmpdir
