--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ check.dependsOn jacocoTestReport
 
 sonarqube {
     properties {
-        property "sonar.host.url", "https://dev.sw2h.xyz:1590/"
+        property "sonar.host.url", "https://sonar.sw2h.xyz/"
         property "sonar.login", "e94757ca1a62b0971f766e7bc1a9292647c11904"
         property "sonar.projectName", "tmpdir/download"
         property "sonar.projectKey", "tmpdir-download"
